fixed header spacing

--- a/style/style.css
+++ b/style/style.css
@@ -1,19 +1,22 @@
 body {
+  -webkit-user-select: none;
   font-family: "Montserrat", sans-serif;
-  background-image: linear-gradient(180deg, #2af598 0%, #009efd 60%);
+  color: #002c55;
+  background: #0066CC;
+  background-image: linear-gradient(180deg, #0099CC 0%, #0066CC 20%);
   background-repeat: no-repeat;
-  background-size: 100% 2600px;
-  color: #004e64;
+  background-size: 100% 100%;
+  user-select: none; /* makes text non-selectable*/
 }
 
 a {
     text-decoration: none;
-    color: #004e64;
+    color: #002c55;
 }
 
 a:hover {
     text-decoration: none;
-    color: #004e64;
+    color: #002c55;
 }
 
 /* Heading */
@@ -26,7 +29,7 @@ header {
   float: left;
   padding-bottom: 10px;
   margin-top: 30px;
-  font-size: 120px;
+  font-size: 110px;
   font-weight: 500;
   color: #004e64;
 }
@@ -34,9 +37,10 @@ header {
 /* Main container */
 
 .link {
+  text-align: center;
   position: relative;
   float: left;
-  font-size: 22px;
+  font-size: 20px;
   padding-left: 8%;
   padding-right: 10%;
   margin-bottom: 30px;
@@ -60,6 +64,7 @@ header {
 }
 
 .page-content {
+  margin-top: 40px;
   padding: 50px;
   background: rgba(0, 0, 0, .15);
   border-radius: 10px;
